<resources>
    <string name="app_name">hci_mobile_library</string>

    <string name="book_history">대여 기록</string>
    <string name="guide">이용 안내</string>
    <string name="more">더 보기</string>
    <string name="my_seat">나의 자리</string>
    <string name="qr_code">QR코드</string>
    <string name="get_seat">좌석 발권</string>
    <string name="search">도서/논문 검색</string>
    <string name="rent">도서 대출</string>
    <string name="call">전화 걸기</string>
    <string name="instagram">인스타그램</string>
    <string name="website">웹사이트</string>
    <string name="seat_usage_history">좌석 사용 기록</string>
    <string name="options">설정</string>
    <string name="log_out">로그아웃</string>
    <string name="add_image">사진등록</string>
    <string name="notice">공지사항</string>
    <string name="rent1">모바일 도서 대출 이용 안내</string>
    <string name="rent2">1. [번호입력] 버튼을 누른 후 책의 ISBN번호를 입력 \n2. [카메라] 버튼을 누른 후 책 앞표지의 등록번호 바코드를 카메라로 인식</string>
    <string name="rent3">모바일 도서대출 대상 자료</string>
    <string name="rent4">중앙도서관 자료 중 대출이 가능한 자료</string>
    <string name="rent5">유의 사항</string>
    <string name="rent6">- 모바일 대출은 중앙도서관 2층/3층 자료실 안에서만 가능합니다. \n- 도서의 딸림자료(부록)은 안내데스크에 문의하세요. \n- 대출 불가 자료 : 멀티미디어 자료/ 참고자료/ 잡지 등 연속간행물</string>
    <string name="rent7">문의</string>
    <string name="rent8">063-270-4404 (대출)\n063-270-3457(시스템)</string>
    <string name="enter_code">코드 입력</string>
    <string name="scan">카메라로 스캔</string>
    <string name="search_hint">검색어를 입력하세요</string>
    <string name="seat_registeration">좌석 발권</string>
</resources>