<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/base_blue"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="266dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/mainlogo" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/button_options"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            app:srcCompat="@drawable/ic_settings" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="vertical">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/white"
                    android:orientation="horizontal"></androidx.viewpager.widget.ViewPager>

                <Button
                    android:id="@+id/button_more_info"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:background="@color/transparent"
                    android:text="@string/more" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/button_myseat"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:background="@color/white"
                    android:text="@string/my_seat"
                    android:textSize="24dp"/>

                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_qr"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:text="@string/qr_code"
                        android:textSize="24dp"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:layout_weight="0" />

                    <Button
                        android:id="@+id/button_seat_register"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:text="@string/get_seat"
                        android:textSize="24dp"/>
                </LinearLayout>

                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainLinearLayout2"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/search"
                    android:textSize="24dp"/>


                <Button
                    android:id="@+id/button_rent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/rent"
                    android:textSize="24dp"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainLinearLayout3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/button_call"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/call" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/button_inst"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/instagram" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/button_weblink"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/website" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>